# COMP-HW

./: .gitignore  CMakeLists.txt  template.cpp
Templates/: Knapsack_DP.cpp
Templates/Graphs/: BFS.cpp  BFS_and_DFS.cpp  Bellman-Ford.cpp  Bipartite_Graph_Checker.cpp  DSU_paint.cpp  Dijkstra_Fast_Implementation  Dijkstra_Multi_Source.cpp  Dijkstra_Single_Source  Dinic_Max_Flow.cpp  Disjoint_Set_Union.cpp  Floyd_Warshall.cpp  Kruskal.cpp  Longest_Path_S_T_DAG.cpp  Max_Bipartite_Matching.cpp  Min_Cost_Bipartite_Perfect_Matching.cpp  Num_of_paths_S_T_DAG.cpp  Segment_Tree.cpp  Tarjan_Strongly_Connected_Components.cpp  Topological_Sorting.cpp
Templates/Math/: Binary_Search  Binary_Search.cpp  Bit_Manipulation_Examples.cpp  Fast_Modulo_Exponentiation.cpp  GCD.cpp  Modulo_Inverse_FermatsLittleTheorem.cpp  Prime_Factorization_Sieve_mult_queries.cpp  Sieve.cpp
final_comp/: qA.cpp  qB.cpp  qC.cpp  qD.cpp  qE.cpp  qF.cpp  qG.cpp  qH.cpp  qJ.cpp
final_comp/not_completed/: qI.cpp
group_comp2/: qC.cpp
group_comp3/: qA.cpp  qB.cpp  qD.cpp
group_comp3/not_completed/: qC.cpp
hw1/mirit/: qA.cpp  qB.cpp  qC.cpp  qD.cpp  qE.cpp  qF.cpp  qG.cpp
hw2/: A.cpp  B  B.cpp  C.cpp  D  D.cpp  E  E.cpp  F.cpp  G.cpp  H.cpp  I  I.cpp
hw3/: B.cpp
