cmake_minimum_required(VERSION 3.25)
project(COMP-HW)

set(CMAKE_CXX_STANDARD 17)


add_executable(final_comp_qA.o final_comp/qA.cpp)
add_executable(final_comp_qB.o final_comp/qB.cpp)
add_executable(final_comp_qC.o final_comp/qC.cpp)
add_executable(final_comp_qD.o final_comp/qD.cpp)
add_executable(final_comp_qE.o final_comp/qE.cpp)
add_executable(final_comp_qF.o final_comp/qF.cpp)
add_executable(final_comp_qG.o final_comp/qG.cpp)
add_executable(final_comp_qH.o final_comp/qH.cpp)
add_executable(final_comp_qI.o final_comp/not_completed/qI.cpp)
add_executable(final_comp_qJ.o final_comp/qJ.cpp)

add_executable(group_comp3_qA.o group_comp3/qA.cpp)
add_executable(group_comp3_qB.o group_comp3/qB.cpp)
add_executable(group_comp3_qC.o group_comp3/not_completed/qC.cpp)
add_executable(group_comp3_qD.o group_comp3/qD.cpp)

add_executable(hw2_A.o hw2/A.cpp)
add_executable(hw2_B.o hw2/B.cpp)
add_executable(hw2_C.o hw2/C.cpp)
add_executable(hw2_D.o hw2/D.cpp)
add_executable(hw2_E.o hw2/E.cpp)
add_executable(hw2_F.o hw2/F.cpp)
add_executable(hw2_G.o hw2/G.cpp)
add_executable(hw2_H.o hw2/H.cpp)
add_executable(hw2_I.o hw2/I.cpp)

add_executable(group_comp2_qC.o group_comp2/qC.cpp)

add_executable(hw1_mirit_qA.o hw1/mirit/qA.cpp)
add_executable(hw1_mirit_qB.o hw1/mirit/qB.cpp)
add_executable(hw1_mirit_qC.o hw1/mirit/qC.cpp)
add_executable(hw1_mirit_qD.o hw1/mirit/qD.cpp)
add_executable(hw1_mirit_qE.o hw1/mirit/qE.cpp)
add_executable(hw1_mirit_qF.o hw1/mirit/qF.cpp)
add_executable(hw1_mirit_qG.o hw1/mirit/qG.cpp)


add_executable(template.o template.cpp)